--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Tactile theme
-description: Tactile is a theme for GitHub Pages.
+title: GWT from scratch
+description: Using Google Web Toolkit (GWT) on Google App Engine (GAE)
 show_downloads: true
 google_analytics:
-theme: 
+theme: tactile
