--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: GWT from scratch
 description: Using Google Web Toolkit (GWT) on Google App Engine (GAE)
 show_downloads: true
 google_analytics:
-theme: tactile
+theme: Tactile
